--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,16 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* ظل خفيف */
     margin-bottom: 8px;
 }
+
+.swiper-container {
+    width: 100%;
+    max-height: 300px; /* تأكد من ضبط الارتفاع بما يناسب موقعك */
+    overflow: hidden;
+}
+
+.swiper-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* يجعل الصورة تملأ الحاوية بدون تشويه */
+    border-radius: 8px;
+}
